Fix for routing problem: http://stackoverflow.com/questions/20204909/ember-link-to-throws-error-does-not-clear-screen-as-expected

--- a/app/styles/refset.styl
+++ b/app/styles/refset.styl
@@ -26,8 +26,16 @@ h3
 #plan .terminal
   float: right;
 
+#details h2
+  margin: 1em 0;
+
 #details .toggle.btn
   float: right
+  margin-right: 1em !important
+  width: 7em;
+
+#details .toggle.btn.first
+  margin-right: 0 !important
 
 .concept .btn
   display: block
